--- a/skins/clean/dialog.css
+++ b/skins/clean/dialog.css
@@ -51,7 +51,7 @@ Comments in this file will give more details about each of the above blocks.
 .cke_dialog_body
 {
 	z-index: 1;
-	background: #eaeaea;
+	background: #fff;
 	border: 1px solid #b2b2b2;
 	border-bottom-color: #999;
 	border-radius: 3px;
@@ -68,22 +68,14 @@ Comments in this file will give more details about each of the above blocks.
 .cke_dialog_title
 {
 	font-weight: bold;
-	font-size: 13px;
+	font-size: 20px;
 	cursor: move;
 	position: relative;
 
 	color: #474747;
-	text-shadow: 0 1px 0 rgba(255,255,255,.75);
 
-	border-bottom: 1px solid #999;
-	padding: 6px 10px;
-
-	border-radius: 2px 2px 0 0;
-	box-shadow: 0 1px 0 #fff inset;
-
-	background: #cfd1cf;
-	background-image: linear-gradient(to bottom, #f5f5f5, #cfd1cf);
-	filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#f5f5f5', endColorstr='#cfd1cf');
+	border-bottom: 1px solid #ddd;
+	padding: 10px 15px;
 }
 
 .cke_dialog_spinner
@@ -155,7 +147,7 @@ Comments in this file will give more details about each of the above blocks.
 .cke_dialog_contents_body
 {
 	overflow: auto;
-	padding: 17px 10px 5px 10px;
+	padding: 10px 15px 5px 15px;
 	margin-top: 22px;
 }
 
@@ -165,13 +157,7 @@ Comments in this file will give more details about each of the above blocks.
 {
 	text-align: right;
 	position: relative;
-	border: none;
-	outline: 1px solid #bfbfbf;
-	box-shadow: 0 1px 0 #fff inset;
-	border-radius: 0 0 2px 2px;
-	background: #cfd1cf;
-	background-image: linear-gradient(to bottom, #ebebeb, #cfd1cf);
-	filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#ebebeb', endColorstr='#cfd1cf');
+	border-top: 1px solid #ddd;
 }
 
 .cke_rtl .cke_dialog_footer
@@ -325,13 +311,13 @@ a.cke_dialog_close_button
 {
 	background-image: url(images/close.png);
 	background-repeat: no-repeat;
-	background-position: 50%;
+	background-position: right;
 	position: absolute;
 	cursor: pointer;
 	text-align: center;
 	height: 20px;
 	width: 20px;
-	top: 4px;
+	top: 10px;
 	z-index: 5;
 	opacity: 0.8;
 	filter: alpha(opacity = 80);
@@ -365,12 +351,12 @@ a.cke_dialog_close_button
 
 .cke_ltr .cke_dialog_close_button
 {
-	right: 5px;
+	right: 15px;
 }
 
 .cke_rtl .cke_dialog_close_button
 {
-	left: 6px;
+	left: 15px;
 }
 
 .cke_dialog_close_button
@@ -537,7 +523,7 @@ textarea.cke_dialog_ui_input_textarea
 
 	border-radius: 3px;
 
-	box-shadow: 0 1px 2px rgba(0,0,0,.15) inset;
+	box-shadow: 0 1px 2px rgba(0,0,0,.1) inset;
 }
 
 input.cke_dialog_ui_input_text:hover,
@@ -743,7 +729,7 @@ a.cke_dialog_ui_button_cancel:active span
 .cke_dialog_footer_buttons
 {
 	display: inline-table;
-	margin: 5px;
+	margin: 10px 15px;
 	width: auto;
 	position: relative;
 	vertical-align: middle;
@@ -959,9 +945,10 @@ tendency that these will be moved to the plugins code in the future.
 
 .cke_dialog_body label
 {
-	display: inline;
+	display: inline-block;
 	margin-bottom: auto;
 	cursor: default;
+	padding-bottom: 2px;
 }
 
 .cke_dialog_body label.cke_required
