--- a/skins/clean/menu.css
+++ b/skins/clean/menu.css
@@ -48,6 +48,11 @@ Special outer level classes used in this file:
 /* .cke_menuitem is the element that holds the entire structure of each of the
    menu items. */
 
+.cke_menu
+{
+	background: #333;
+}
+
 .cke_menubutton
 {
 	/* The "button" inside a menu item is a <a> element.
@@ -95,42 +100,17 @@ Special outer level classes used in this file:
 /* The menu item icon. */
 .cke_menubutton_icon
 {
-	background-color: #D7D8D7;
-	opacity: 0.70; /* Safari, Opera and Mozilla */
-	filter: alpha(opacity=70); /* IE */
-	padding: 4px;
-}
-
-.cke_hc .cke_menubutton_icon
-{
-	height: 16px;
-	width: 0;
-	padding: 4px 0;
-}
-
-.cke_menubutton:hover .cke_menubutton_icon,
-.cke_menubutton:focus .cke_menubutton_icon,
-.cke_menubutton:active .cke_menubutton_icon
-{
-	background-color: #D0D2D0;
-}
-
-.cke_menubutton_disabled:hover .cke_menubutton_icon,
-.cke_menubutton_disabled:focus .cke_menubutton_icon,
-.cke_menubutton_disabled:active .cke_menubutton_icon
-{
-	/* The icon will get opacity as well when hovered. */
-	opacity: 0.3;
-	filter: alpha(opacity=30);
+	display: none;
 }
 
 /* The textual part of each menu item. */
 .cke_menubutton_label
 {
-	padding: 0 5px;
+	padding: 5px;
 	background-color: transparent;
 	width: 100%;
 	vertical-align: middle;
+	color: #fff;
 }
 
 .cke_menubutton_disabled .cke_menubutton_label
@@ -157,7 +137,7 @@ Special outer level classes used in this file:
 .cke_menubutton:focus,
 .cke_menubutton:active
 {
-	background-color: #EFF0EF;
+	background-color: #555;
 }
 
 .cke_panel_frame .cke_menubutton_label
