--- a/skins/clean/toolbar.css
+++ b/skins/clean/toolbar.css
@@ -158,19 +158,12 @@ a.cke_button_on
 
 a.cke_button_on:hover,
 a.cke_button_on:focus,
-a.cke_button_on:active
-{
-	background: #777;
-}
-
+a.cke_button_on:active,
 a.cke_button_off:hover,
 a.cke_button_off:focus,
-a.cke_button_off:active,
-a.cke_button_disabled:hover,
-a.cke_button_disabled:focus,
-a.cke_button_disabled:active
+a.cke_button_off:active
 {
-	background: #555;
+	background: #777;
 }
 
 /* The icon which is a visual representation of the button. */
