Change text color plugin styles

--- a/skins/clean/panel.css
+++ b/skins/clean/panel.css
@@ -85,6 +85,7 @@ panel contents and color panels check menu.css and colorpanel.css.
 {
 	overflow-y: auto;
 	overflow-x: hidden;
+	background-color: #333;
 }
 
 /*
