--- a/skins/clean/colorpanel.css
+++ b/skins/clean/colorpanel.css
@@ -66,10 +66,11 @@ The COLOR PALETTE section instead is a table with a variable number of cells
    It is a small, square-shaped element which can be selected from the palette. */
 span.cke_colorbox
 {
-	width: 10px;
-	height: 10px;
-	border: #808080 1px solid;
+	border: #fff 1px solid;
+	width: 13px;
+	height: 13px;
 	float: left;
+	border-radius: 50%;
 }
 
 .cke_rtl span.cke_colorbox
@@ -80,11 +81,10 @@ span.cke_colorbox
 /* The wrapper of the span.cke_colorbox. It provides an extra border and padding. */
 a.cke_colorbox
 {
-	border: #fff 1px solid;
-	padding: 2px;
+	padding: 3px;
 	float: left;
-	width: 12px;
-	height: 12px;
+	width: 14px;
+	height: 14px;
 }
 
 .cke_rtl a.cke_colorbox
@@ -93,12 +93,11 @@ a.cke_colorbox
 }
 
 /* Different states of the a.cke_colorbox wrapper. */
-a:hover.cke_colorbox,
-a:focus.cke_colorbox,
-a:active.cke_colorbox
+a:hover.cke_colorbox span.cke_colorbox,
+a:focus.cke_colorbox span.cke_colorbox,
+a:active.cke_colorbox span.cke_colorbox
 {
-	border: #b6b6b6 1px solid;
-	background-color: #e5e5e5;
+	border-color: #fff !important;
 }
 
 /* Buttons which are visible at the top/bottom of the color palette:
