Tweek hover style for white color circle

--- a/skins/clean/colorpanel.css
+++ b/skins/clean/colorpanel.css
@@ -143,5 +143,5 @@ span.cke_coloricon_default {
 }
 
 a:hover.cke_colorbox span.cke_coloricon_white {
-	border-color: #F6E32C !important;
+	border-color: #ffb400 !important;
 }
