Fix custom color

--- a/skins/clean/menu.css
+++ b/skins/clean/menu.css
@@ -58,6 +58,7 @@ Special outer level classes used in this file:
 	/* The "button" inside a menu item is a <a> element.
 	   Transforms it into a block. */
 	display: block;
+	cursor: pointer;
 }
 
 .cke_menuitem span
