--- a/skins/moono/menu.css
+++ b/skins/moono/menu.css
@@ -84,6 +84,10 @@ Special outer level classes used in this file:
 
 .cke_menubutton_inner {
 	display: table-row;
+	cursor: pointer;
+}
+.cke_menubutton_inner span {
+	cursor: pointer;
 }
 
 .cke_menubutton_icon,
