--- a/skins/clean/panel.css
+++ b/skins/clean/panel.css
@@ -55,6 +55,11 @@ panel contents and color panels check menu.css and colorpanel.css.
     box-shadow: 0 0 3px rgba(0,0,0,.15);
 }
 
+/* remove the fucking blue border */
+.cke_panel_block {
+	outline: none;
+}
+
 /* This class represents panels which are used as context menus. */
 .cke_menu_panel
 {
